--- a/MyAI/Views/Shared/_Layout.cshtml
+++ b/MyAI/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="OffensiveWord">Offensive Word</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ChatBot">ChatBot Stream</a>
+                        </li>
                     </ul>
                 </div>
             </div>
