--- a/MyAI/Views/Shared/_Layout.cshtml
+++ b/MyAI/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TestChatBot">Test API</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AngularJSExample">AngularJS Example</a>
+                        </li>
                     </ul>
                 </div>
             </div>
